<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DynamicFragment">

    <LinearLayout
        android:id="@+id/one"
        android:layout_width="match_parent"
        android:background="@drawable/base_layout"
        android:backgroundTint="@color/colorBase"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/fragment_header"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="4dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:text="@string/ask" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_button_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/yes"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <RadioButton
                android:id="@+id/radio_button_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/no"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>
        </RadioGroup>
    </LinearLayout>
</LinearLayout>